--- a/docker/.env
+++ b/docker/.env
@@ -2,3 +2,5 @@ MYSQL_DB_USER=localdb
 MYSQL_DB_PASSWORD=localdb
 MYSQL_DB_NAME=localdb
 SQL_BK_FILE=./data.sql
+MYSQL_DB_HOST=db
+APP_BASE_URL=https://ubiquitous-broccoli-4j9g4gp6x5q7c7x6j.github.dev/api
